# my-ri

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  repro  repro.rs
issues/: TODO.md  storage-rework.md  watch-reload.md
ri-cli/: Cargo.toml
ri-cli/src/: agent.rs  interactive.rs  main.rs  meta_tools.rs  print_mode.rs  rpc_mode.rs
ri-web/: Cargo.toml  DESIGN-watch.md
ri-web/frontend/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ri-web/frontend/public/: diff-review.html
ri-web/frontend/public/logo/: index.html
ri-web/frontend/src/: App.tsx  api.ts  highlight.ts  index.tsx  styles.css  types.ts
ri-web/frontend/src/components/: ChatView.tsx  LogPanel.tsx  MessageView.tsx  SessionList.tsx  SettingsPanel.tsx  SubSessionsPanel.tsx
ri-web/src/: agent.rs  api.rs  main.rs  meta_tools.rs  state.rs  tracing_broadcast.rs  watch.rs
