[package]
name = "ri-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "ri"
path = "src/main.rs"

[dependencies]
ri = { path = "../ri-core/crates/ri" }
ri-ai = { path = "../ri-core/crates/ri-ai" }
ri-tools = { path = "../ri-core/crates/ri-tools" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
eyre = "0.6"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
urlencoding = "2"
async-stream = "0.3"
ratatui = { version = "0.30", features = ["scrolling-regions", "unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea = { git = "https://github.com/phsym/tui-textarea", default-features = false, features = ["crossterm"] }
tui-markdown = "0.3"
