[package]
name = "ri-web"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "ri-web"
path = "src/main.rs"

[dependencies]
ri = { path = "../ri-core/crates/ri" }
ri-ai = { path = "../ri-core/crates/ri-ai" }
ri-tools = { path = "../ri-core/crates/ri-tools" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
eyre = "0.6"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
async-stream = "0.3"
async-trait = "0.1"
notify-debouncer-mini = "0.7"

